# xclipboard-notify

./: Cargo.toml  README.md
src/: lib.rs
src/listener/: mod.rs  windows.rs  x11.rs
