[package]
name = "xclipboard-notify"
version = "0.1.0"
authors = ["great"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser","windef","minwindef", "libloaderapi"] }
clipboard-win = "*"
cfg-if = "0.1.10" 

[target.'cfg(target_os = "linux")'.dependencies]
x11-clipboard = "0.5.1"